--- a/Develop/Output/team.html
+++ b/Develop/Output/team.html
@@ -16,49 +16,49 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-12 jumbotron mb-3 team-heading">
-                <h1 class="text-center">My Team</h1>
+                <h1 class="text-center title">My Team</h1>
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">alfred</h2>
+        <h2 class="card-title">Dan ED</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 23</li>
-            <li class="list-group-item">Email: <a href="mailto:fiftysexy@gmail.com">fiftysexy@gmail.com</a></li>
-            <li class="list-group-item">Office number: 1</li>
+            <li class="list-group-item">ID: 43</li>
+            <li class="list-group-item">Email: <a href="mailto:cmill">cmill</a></li>
+            <li class="list-group-item">Office number: 9832</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Christian Miller</h2>
+        <h2 class="card-title">MOM</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 6</li>
-            <li class="list-group-item">Email: <a href="mailto:cnmiller127@gmail.com">cnmiller127@gmail.com</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/cnmiller127" target="_blank" rel="noopener noreferrer">cnmiller127</a></li>
+            <li class="list-group-item">ID: 123</li>
+            <li class="list-group-item">Email: <a href="mailto:MOM">MOM</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/MOM" target="_blank" rel="noopener noreferrer">MOM</a></li>
         </ul>
     </div>
 </div>
-<div class="card employee-card">
+,<div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">martha stewart</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+        <h2 class="card-title">sdf</h2>
+        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 5</li>
-            <li class="list-group-item">Email: <a href="mailto:martha@gmail.com">martha@gmail.com</a></li>
-            <li class="list-group-item">School: tufts university</li>
+            <li class="list-group-item">ID: 11</li>
+            <li class="list-group-item">Email: <a href="mailto:asdf">asdf</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/sdf" target="_blank" rel="noopener noreferrer">sdf</a></li>
         </ul>
     </div>
 </div>
