--- a/Develop/Output/team.html
+++ b/Develop/Output/team.html
@@ -25,40 +25,40 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Dan ED</h2>
+        <h2 class="card-title">Don Julio</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 43</li>
-            <li class="list-group-item">Email: <a href="mailto:cmill">cmill</a></li>
-            <li class="list-group-item">Office number: 9832</li>
+            <li class="list-group-item">ID: 1</li>
+            <li class="list-group-item">Email: <a href="mailto:DonJulio@fakeemail.com">DonJulio@fakeemail.com</a></li>
+            <li class="list-group-item">Office number: 1094</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">MOM</h2>
+        <h2 class="card-title">Chuck Ladel</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 123</li>
-            <li class="list-group-item">Email: <a href="mailto:MOM">MOM</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/MOM" target="_blank" rel="noopener noreferrer">MOM</a></li>
+            <li class="list-group-item">ID: 2</li>
+            <li class="list-group-item">Email: <a href="mailto:chuckLadel@fakeemail.com">chuckLadel@fakeemail.com</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/cnmiller127" target="_blank" rel="noopener noreferrer">cnmiller127</a></li>
         </ul>
     </div>
 </div>
-,<div class="card employee-card">
+<div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">sdf</h2>
-        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+        <h2 class="card-title">Alice Wonderland</h2>
+        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 11</li>
-            <li class="list-group-item">Email: <a href="mailto:asdf">asdf</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/sdf" target="_blank" rel="noopener noreferrer">sdf</a></li>
+            <li class="list-group-item">ID: 3</li>
+            <li class="list-group-item">Email: <a href="mailto:aliceInWonderland@fakeemail.com">aliceInWonderland@fakeemail.com</a></li>
+            <li class="list-group-item">School: Penn State</li>
         </ul>
     </div>
 </div>
